# sell-a-maze

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  HOWTO.docker.txt  make-image.sh
doc/: format_pdf.sh  report.md
misc/: post.sh
src/: cairo.rs  circular_builder.rs  generator.rs  graph.rs  handler.rs  hexagonal_builder.rs  instance.rs  job.rs  lib.rs  maker.rs  mazeservice.service  queue.rs  randomness.rs  rectangular_builder.rs  shapes.rs  square_builder.rs  storage.rs  svg_painter.rs  triangular_builder.rs
static/: index.html  samic.cairo  script.js  style.css
work/: grand-kingdom-344016-e5104993a6aa.json  samic.json  validate.sh
