[package]
name = "sell-a-maze"
version = "0.1.0"
edition = "2021"
authors = ["Ladislav Sladecek <ladislav.sladecek@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
env_logger = "0.9.0" 
fixedbitset = "0.4.1"
log = "0.4.14"
num-bigint = "0.4.3"
primes = "0.3.0"
xmlwriter = "0.1.0"
