[package]
name = "sell-a-maze"
version = "0.1.0"
edition = "2021"
authors = ["Ladislav Sladecek <ladislav.sladecek@gmail.com>"]

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
cloud-storage = { version = "0.11.0", features = ["global-client", "sync"]}
env_logger = "0.9.0" 
fixedbitset = "0.4.1"
log = "0.4.14"
num-bigint = "0.4.3"
primes = "0.3.0"
rand = "0.8.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
xmlwriter = "0.1.0"
